--- a/AdvanceSelenium/pom.xml
+++ b/AdvanceSelenium/pom.xml
@@ -3,6 +3,61 @@
   <groupId>AdvanceSelenium</groupId>
   <artifactId>AdvanceSelenium</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  
+  <profiles>
+   <profile>
+      <id>SmokeTest</id>
+      <build>
+         <plugins>
+            <plugin>
+               <groupId>org.apache.maven.plugins</groupId>
+               <artifactId>maven-surefire-plugin</artifactId>
+               <version>2.12.4</version>
+               <configuration>
+                  <suiteXmlFiles>
+                     <suiteXmlFile>suite_SmokeTest.xml</suiteXmlFile>
+                  </suiteXmlFiles>
+               </configuration>
+            </plugin>     
+         </plugins>
+      </build>
+   </profile>
+   <profile>
+      <id>RegressionTest</id>
+      <build>
+         <plugins>
+            <plugin>
+               <groupId>org.apache.maven.plugins</groupId>
+               <artifactId>maven-surefire-plugin</artifactId>
+               <version>2.12.4</version>
+               <configuration>
+                  <suiteXmlFiles>
+                     <suiteXmlFile>suite_RegressionTest.xml</suiteXmlFile>
+                  </suiteXmlFiles>
+               </configuration>
+            </plugin>     
+         </plugins>
+      </build>
+   </profile>
+    <profile>
+      <id>ParallelCrossBrowserTest</id>
+      <build>
+         <plugins>
+            <plugin>
+               <groupId>org.apache.maven.plugins</groupId>
+               <artifactId>maven-surefire-plugin</artifactId>
+               <version>2.12.4</version>
+               <configuration>
+                  <suiteXmlFiles>
+                     <suiteXmlFile>suite_Parallel_CrossBrowserTest.xml</suiteXmlFile>
+                  </suiteXmlFiles>
+               </configuration>
+            </plugin>     
+         </plugins>
+      </build>
+   </profile>
+</profiles>
+
   <dependencies>
 	<!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
 <dependency>
