--- a/AdvanceSelenium/pom.xml
+++ b/AdvanceSelenium/pom.xml
@@ -4,6 +4,11 @@
   <artifactId>AdvanceSelenium</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   
+  <properties>
+	<maven.compiler.target>1.8</maven.compiler.target>
+	<maven.complier.source>1.8</maven.complier.source>
+  </properties>
+  
   <profiles>
    <profile>
       <id>SmokeTest</id>
